--- a/_config.next.yml
+++ b/_config.next.yml
@@ -157,7 +157,7 @@ site_state: true
 # Key is the link label showing to end users.
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
-  # GitHub: https://github.com/DeepOcean299 || fab fa-github
+  # GitHub: https://github.com/StarsPicking || fab fa-github
   E-Mail: mailto:15652533044@163.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Twitter: https://twitter.com/yourname || fab fa-twitter
@@ -413,8 +413,8 @@ bookmark:
 
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
-  enable: false
-  permalink: https://github.com/deepocean229
+  enable: true
+  permalink: https://github.com/StarsPicking
 
 
 # ---------------------------------------------------------------
