--- a/.github/workflows/blogFeed.yml
+++ b/.github/workflows/blogFeed.yml
@@ -1,7 +1,7 @@
 name: 生成博客最近更新文章列表
 on:
   schedule: # Run workflow automatically
-    - cron: '21 */10 * * *' # Runs every hour, on the hour
+    - cron: '0 */5 * * *' # Runs every hour, on the hour
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 
 jobs:
@@ -17,5 +17,5 @@ jobs:
           max_post_count: 6
           committer_username: "github-actions[bot]"
           committer_email: "github-actions[bot]@users.noreply.github.com"
-          feed_list: "https://wiki.eryajf.net/rss.xml"
+          feed_list: "https://www.zhangtq.com/rss.xml"
           template: "$newline- $randomEmoji(💯,🔥,💫,🚀,🌮,📝,🥳,💻,🧰,🏊,🥰,🧐,🤓,😎,🥸,🤩,🤗,🤔,🫣,🤭,🤠,👹,👺,🤡,🤖,🎃,😺,🫶,👍,💪,💄,👀,🧠,🧑‍🏫,👨‍🏫,💂,🧑‍💻,🥷,💃,🕴,💼,🎓,🐻,🐵,🙉,🦄,🦆,🦅,🦍,🦣,🐘,🦒,🦏,🐎,🦩,🐲,🌝,🌜,🌏,🌈,🌊,🎬,🎭,🚀,🚦,⛽️,🗽,🎡,🌋,🌁,💡,🕯,🪜,🧰,⚗️,🔭,🪄,🎊,🎉,) [$title]($url) $newline"
